feat: toggle random key on each press

--- a/src/app.css
+++ b/src/app.css
@@ -1,14 +1,14 @@
 @import "tailwindcss";
 
 .black-key {
-	width: 50px;
-	height: 150px;
+	width: 2.5rem;
+	height: 9.5rem;
 	position: absolute;
-	margin-left: -25px;
-	z-index: 10;
+	margin-left: -1.4em;
+	/*z-index: 10;*/
 }
 
 .white-key {
-	width: 80px;
-	height: 250px;
+	width: 4.5rem;
+	height: 17rem;
 }
